--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,33 @@ body, h1, h2, h3, p {
     padding: 0;
 }
 
+section {
+    display: grid;
+    place-items: center;
+    padding: 0;
+    margin: 0;
+}
+
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+    transition: all 1s;
+}
+
+@media (prefers-reduced-motion) {
+    .hidden { 
+        transition: none;
+    }
+}
+
 /* Style the navigation bar */
 nav {
     background-color: #333;
@@ -31,10 +58,24 @@ section {
     padding: 40px;
 }
 
+/* Style the Icons */
+.social-icons {
+    display: flex;
+    flex-direction: row;
+}
+
+.icon:nth-child(2) {
+    transition-delay: 300ms;
+}
+
 /* Style the footer */
 footer {
     text-align: center;
     background-color: #333;
     color: #fff;
     padding: 10px 0;
+}
+
+.personal-photo {
+    width:300px;
 }
